# rust-practice

./: LICENSE
guess_my_number/: Cargo.toml  README.md
guess_my_number/src/: main.rs
word_count/: Cargo.toml
word_count/src/: counter.rs  main.rs
